--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
         <div><button>Buscar con Google</button></div>
         <div><button>Me siento con suerte</button></div>
         </section>
+    <section>
+        <div class="redireccion">
+            Ofrecido por Guille en:  
+            <a href="https://www.google.es/setprefs?sig=0_MpECHNZY1uwEZIRvL9dc2jOry5Q%3D&amp;hl=es&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwjJzZyFyfCBAxVlIEQIHXGOAXIQ2ZgBCBQ">Español</a>   
+            <a href="https://www.google.es/setprefs?sig=0_MpECHNZY1uwEZIRvL9dc2jOry5Q%3D&amp;hl=ca&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwjJzZyFyfCBAxVlIEQIHXGOAXIQ2ZgBCBU">català</a>    
+            <a href="https://www.google.es/setprefs?sig=0_MpECHNZY1uwEZIRvL9dc2jOry5Q%3D&amp;hl=gl&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwjJzZyFyfCBAxVlIEQIHXGOAXIQ2ZgBCBY">galego</a>    
+            <a href="https://www.google.es/setprefs?sig=0_MpECHNZY1uwEZIRvL9dc2jOry5Q%3D&amp;hl=eu&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwjJzZyFyfCBAxVlIEQIHXGOAXIQ2ZgBCBc">euskara</a>  
+            </div>
+    </section>
     </main>
 </body>
 </html>
